force-app/main/default/objects/FEC_Case_Hold_History__c/FEC_Case_Hold_History__c.object-meta.xml
<CustomObject>
    <label>Case Hold History</label>
    <nameField>
        <displayFormat>CHK-{00000000}</displayFormat>
        <label>Case Hold History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Hold History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>