force-app/main/default/objects/FEC_Case_Hold_History__c/fields/FEC_End_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_End_Time__c</fullName>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>