force-app/main/default/objects/FEC_Case_Hold_History__c/fields/FEC_Hold_Case_Config__c.field-meta.xml
<CustomField>
    <fullName>FEC_Hold_Case_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hold Case Config</label>
    <referenceTo>FEC_Hold_Case_Config__c</referenceTo>
    <relationshipLabel>Case Hold History</relationshipLabel>
    <relationshipName>Case_Hold_History</relationshipName>
    <type>Lookup</type>
</CustomField>