force-app/main/default/objects/FEC_Case_Hold_History__c/fields/FEC_Release_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Release_Case_Status__c</fullName>
    <label>Release Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>