force-app/main/default/objects/FEC_Case_Hold_History__c/fields/FEC_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Type__c</fullName>
    <label>Hold Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>